Created a GridMap class to store layer data, first proper implementation of 3d done, only 1 more layer though

--- a/Isometric_Board/Isometric_Board.csproj
+++ b/Isometric_Board/Isometric_Board.csproj
@@ -53,6 +53,7 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="Grid.cs" />
+    <Compile Include="GridMap.cs" />
     <Compile Include="IsometricTile.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
