--- a/Isometric_Board/Isometric_Board.csproj
+++ b/Isometric_Board/Isometric_Board.csproj
@@ -54,12 +54,15 @@
     </Compile>
     <Compile Include="Grid.cs" />
     <Compile Include="GridMap.cs" />
+    <Compile Include="GridMap_v2.cs" />
+    <Compile Include="Grid_v2.cs" />
     <Compile Include="IsometricCollider.cs" />
     <Compile Include="IsometricTile.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Renderer.cs" />
+    <Compile Include="Renderer_v2.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
