--- a/Isometric_Board/Isometric_Board.csproj
+++ b/Isometric_Board/Isometric_Board.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RenderComponent.cs" />
     <Compile Include="Renderer_v2.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
