Now 64x64 based compared to the previous 48x48 (nicer to work with more complex shapes) got a basic player going and the bottom tiles are now slabs

--- a/Isometric_Board/Isometric_Board.csproj
+++ b/Isometric_Board/Isometric_Board.csproj
@@ -111,5 +111,17 @@
   <ItemGroup>
     <None Include="Resources\high_res_isometric_cube_white_bordered.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\64x64_isometric_cube.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\player_main.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\player_shadow.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\64x64_isometric_tile.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
